refactor: minor code optimizations + more renaming for consistency